# neotest-ctest

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  todo.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: release.yml  style.yml  test.yml  workflow.yml
lua/neotest-ctest/: config.lua  ctest.lua  init.lua  parse.lua  utils.lua
lua/neotest-ctest/framework/: catch2.lua  cpputest.lua  doctest.lua  gtest.lua  init.lua
lua/neotest-ctest/framework/catch2/: init.lua
lua/neotest-ctest/framework/gtest/: init.lua
lua/neotest-ctest/frameworks/gtest/: init.lua
scripts/: test.sh
tests/integration/: CMakeLists.txt  Makefile  adapter_spec.lua  catch2_spec.luax  ctest_spec.lua  doctest_spec.luax  gtest_spec.lua  utils.lua
tests/integration/example/: .clang-format  CMakeLists.txt
tests/integration/example/catch2/: CMakeLists.txt  SCENARIO_test.cpp  TEST_CASE_METHOD_test.cpp  TEST_CASE_test.cpp
tests/integration/example/cmake/: FindCatch2.cmake  FindDoctest.cmake  FindGoogleTest.cmake
tests/integration/example/doctest/: CMakeLists.txt  SCENARIO_test.cpp  TEST_CASE_FIXTURE_test.cpp  TEST_CASE_test.cpp
tests/integration/example/gtest/: CMakeLists.txt  TEST_F_test.cpp  TEST_P_test.cpp  TEST_test.cpp
tests/integration/src/: test.cpp
tests/unit/: catch2_spec.lua  cpputest_spec.lua  ctest_spec.lua  doctest_spec.lua  framework_spec.lua  gtest_spec.lua  init_default_spec.lua  init_spec.lua  init_user_spec.lua  minimal_init.lua  minimal_init.vim  results_spec.lua  utils_spec.lua
tests/unit/data/: ctestinfo.json  tests.junit.xml
tests/unit/data/catch2/: SCENARIO_test.cpp  TEST_CASE_METHOD_test.cpp  TEST_CASE_test.cpp
tests/unit/data/cpputest/: TEST_test.cpp
tests/unit/data/doctest/: SCENARIO_test.cpp  TEST_CASE_FIXTURE_test.cpp  TEST_CASE_test.cpp
tests/unit/data/gtest/: TEST_F_test.cpp  TEST_P_test.cpp  TEST_test.cpp  gtest_test.cpp
